fixed patient2view2 and patient3view2 mammorgram interactives. also added reattached slide 44

--- a/src/javascript/templates/patient1/patient1View3.hbs
+++ b/src/javascript/templates/patient1/patient1View3.hbs
@@ -45,8 +45,9 @@
 
     </p>
        <figure>
-         <img src="images/breast_scan3.jpg" alt="" />
+         <img src="images/normalbreast.jpg" alt="" />
        </figure>
+       <br><br>
         <p>
         Here is an <strong>abnormal</strong> mammogram. Note that the red circled area contains an abnormally shaped or new abnormal area of white tissue.  Not all abnormal tissue is seen on a mammogram is cancerous.
 
