--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -62,7 +62,7 @@ Review Brittany’s mammogram and click on an area that shows abnormalities.
       </p>
       <div class="svg-container">
         <div class="svg-text"><h2>Which object is closest in size?</h2></div>
-      <svg preserveAspectRatio="xMinYMin meet" class="svg-content" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <!-- <svg preserveAspectRatio="xMinYMin meet" class="svg-content" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          width="100%" height="100%" viewBox="0 0 432 451.2" enable-background="new 0 0 432 451.2" xml:space="preserve">
          <image width="432" height="451.2" xlink:href="images/Mammogram_Left_Abnormal_Patient3-Brittany.jpg">
          </image>
@@ -78,7 +78,53 @@ Review Brittany’s mammogram and click on an area that shows abnormalities.
       <path class="circle" fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M122.16,87.36c22.4,0,40.56,18.159,40.56,40.56
         c0,22.4-18.16,40.56-40.56,40.56c-22.401,0-40.56-18.159-40.56-40.56C81.6,105.519,99.759,87.36,122.16,87.36z"/>
       <path class="cancer" fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M98.4,109.44"/>
+      </svg> -->
+
+      <?xml version="1.0" encoding="utf-8"?>
+
+
+      <svg style="cursor:pointer;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+       viewBox="0 0 810 810" style="enable-background:new 0 0 810 810;" xml:space="preserve">
+      <style type="text/css">
+        .st0{opacity:0.35;}
+        .st1{fill:#FFFFFF;}
+      </style>
+      <image style="overflow:visible;" width="810" height="810" xlink:href="images/Mammogram_Left_Abnormal_Patient3-Brittany.jpg" >
+      </image>
+      <circle class="st0" cx="154.6" cy="281.6" r="79.9"/>
+      <path fill="#FFFFFF" class="circle" d="M154.6,369.5c-48.6,0-87.9-39.4-87.9-87.9s39.4-87.9,87.9-87.9s87.9,39.4,87.9,87.9l0,0
+      C242.5,330.1,203.2,369.5,154.6,369.5z M154.6,206.7c-41.4,0-74.9,33.5-74.9,74.9s33.5,74.9,74.9,74.9s74.9-33.5,74.9-74.9l0,0
+      C229.5,240.2,196,206.7,154.6,206.7z"/>
+      <path fill="#FFFFFF" class="circle2" d="M62,189l10,10c45.6-45.6,119.6-45.6,165.2,0s45.6,119.6,0,165.2l10,10c50.4-51.9,49.1-134.8-2.8-185.2
+      C193.6,139.7,112.8,139.7,62,189z"/>
+      <polygon class="cancer" points="97,360 90,347 81,326.6 62,304 82,263 114,226 162,203 195,203 224,217 239,248 246,274 217,307
+      187,335 158,354 119,365 "/>
       </svg>
+      <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-body">
+              <h2>Correct. The area you clicked on indicates abnormal breast tissue.</h2>
+            </div>
+            <div class="modal-footer background-nav-blue">
+              <a href="/patient3view3" data-navigate="patient2view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="modalIncorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-body">
+              <h2>Incorrect. The area you clicked on indicates normal breast tissue. Please try again</h2>
+            </div>
+            <div class="modal-footer background-nav-blue">
+              <a class="continue-2 close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again</button></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
       </div>
           <div class="row continue-container background-nav-blue">
               <div class="col-md-12 no-pad text-center">
@@ -95,19 +141,7 @@ Review Brittany’s mammogram and click on an area that shows abnormalities.
                   <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                   <!-- Modal -->
-                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                    <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-body">
-                          <h2>Correct! The area you clicked on indicates abnormal breast tissue.</h2>
-                        </div>
-                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient3view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
 
-                        </div>
-                      </div>
-                    </div>
-                  </div>
 
 
                 </div>
