replaced images in multiple templates

--- a/src/javascript/templates/endView.hbs
+++ b/src/javascript/templates/endView.hbs
@@ -22,6 +22,7 @@ This targeted approach offers particular promise in the treatment of breast canc
 In keeping with the MoonShot initiative to cure cancer, a better understanding of the unique characteristics of each tumor will guide the development of more effective treatments for cancer patients.  This strategy will one day allow us to win the war against cancer.
 
 </p>
+<figure><img src="images/patient_and_doctor3.jpg" alt="" /></figure>
 
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
