--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -65,6 +65,9 @@
               <main id="content-main" class="row patient-1">
 
                 <h2>Conducting the biopsy:</h2>
+                <figure>
+                  <img src="images/microscope8.jpg" alt="" />
+                </figure>
                 <p>Does Velma's breast tissue sample indicate the presence of cancer?
                             </p>
                      <figure>
