--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -55,6 +55,9 @@
 
         </div>
       </div>
+      <figure>
+        <img src="images/microscope8.jpg" alt="" />
+      </figure>
       <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.
 </p>
 <ul class="specs">
