--- a/src/javascript/templates/patient1/patient1View36.hbs
+++ b/src/javascript/templates/patient1/patient1View36.hbs
@@ -65,7 +65,7 @@ Putting it All Together: The OncoType DX® Test       </blockquote>
 
 <strong>Velma’s score was 10. </strong>
  </p>
-<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
+<figure>  <img src="images/test.jpg" alt="cell biopsy slide 3" /></figure>
 
 
             <div class="row continue-container background-nav-blue">
