--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -55,6 +55,9 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
 
         </div>
       </div>
+      <figure>
+        <img src="images/microscope8.jpg" alt="" />
+      </figure>
       <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.
 </p>
 <ul class="specs">
