removed border on iframe

--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -44,10 +44,8 @@
     </div>
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
-    <blockquote>
-      <!-- Velma’s doctors have sent her tissue sample for ER testing.
-    </blockquote> -->
-    <main id="content-main" class="row patient-3 svg-test">
+  
+    <main id="content-main" class="row patient-3 svg-text">
 
 
         <div class="svg-container">
