--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -197,6 +197,9 @@ height: 18px;
     transform: translate(4vw, 10em);
 
 }
+.hide-nav {
+  display: none;
+}
 .svg-test {
   padding:0!important;
   p {
