--- a/src/javascript/templates/patient1/patient1View38.hbs
+++ b/src/javascript/templates/patient1/patient1View38.hbs
@@ -63,43 +63,14 @@
                         Take this quiz to refresh what you have learned and that will help you with this lesson.
 
                       </p>
-                        <iframe id="my_typeform" src="https://discoverycep.typeform.com/to/OPqTSw">
+                        <iframe id="my_typeform" src="https://discoverycep.typeform.com/to/OPqTSw" frameBorder="0">
 
                         </iframe>
+                        <!-- <a class="previous" href="/patient1view37" data-navigate="patient1view37"><button class="" type="button" name="button">&#8592; Previous</button></a> -->
 
-                        <div class="row continue-container background-nav-blue">
-                            <div class="col-md-12 no-pad text-center">
-                              <div class="col-md-4">
-                                <a class="previous" href="/patient1view37" data-navigate="patient1view37"><button class="" type="button" name="button">&#8592; Previous</button></a>
-                              </div>
-                              <div class="col-md-4 line-across">
+                        <!-- <a href="/startview2" data-navigate="startview2" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a> -->
 
-                              </div>
-                              <div class="col-md-4">
-
-
-                                <!-- Button trigger modal -->
-                                <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                                  <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                      <div class="modal-body">
-                                      <h2><span class="pink-hl">Slide 1 </span>contains abnormal cells from your patient's biopsy. Slide 2 contains normal cells.</h2>
-                                      </div>
-                                      <div class="modal-footer background-nav-blue">
-                                        <a href="/startview2" data-navigate="startview2" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
-
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-
-
-                              </div>
-                            </div>
-                        </div>
+                      
 
                     </main>
                 </div>
