added pink highlight to modal copy saying correct and updated copy on final screen

--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -114,7 +114,7 @@ Michele has never had breast cancer before.</p>
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                         <h2>Correct! Yes, it is about the size of a walnut.</h2>
+                         <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a walnut.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
                          <a href="/patient2view4" data-navigate="patient2view4" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
