--- a/src/javascript/templates/endView.hbs
+++ b/src/javascript/templates/endView.hbs
@@ -14,7 +14,7 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-Congratulations! You have completed the Decoding Cancer Virtual Lab!     </blockquote>
+Congratulations, you have completed the Decoding Cancer Virtual Lab.    </blockquote>
     <main id="content-main" class="row patient-3">
 
       <p>As you have experienced in this lab, precision medicine reduces over-treatment and under-treatment of cancer. Precision medicine better defines options for treatment accounting for an individual’s unique tumor characteristics and other patient factors.
