--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -70,7 +70,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-        <h2>Correct. The area you clicked on indicates abnormal breast tissue.</h2>
+        <h2><span class="pink-hl">Correct!</span> The area you clicked on indicates abnormal breast tissue.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
         <a href="/patient1view5" data-navigate="patient1view5" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
@@ -111,7 +111,7 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-body">
-                          <h2>Correct! The area you clicked on indicates abnormal breast tissue.</h2>
+                          <h2><span class="pink-hl">Correct!</span> The area you clicked on indicates abnormal breast tissue.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
                           <a href="/patient1view5" data-navigate="patient1view5" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
