--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -112,7 +112,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-body">
-                <h2>Correct! Yes, it is about the size of a walnut.</h2>
+                <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a walnut.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
                 <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
