--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -115,7 +115,7 @@
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                         <h2>Correct! Yes, it is about the size of a walnut.</h2>
+                         <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a walnut.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
                          <a href="/patient3view4" data-navigate="patient3view4" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
