closed multiple issues. mostly copy

--- a/src/javascript/templates/patient1/patient1View27.hbs
+++ b/src/javascript/templates/patient1/patient1View27.hbs
@@ -78,7 +78,7 @@ In this example. the ratio of red dots to green dots is 6:2, or 3.  This means t
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="patient1view28" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view28" class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
