--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -82,7 +82,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="patient1view29" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view29" class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
