--- a/src/javascript/templates/patient1/patient1View3.hbs
+++ b/src/javascript/templates/patient1/patient1View3.hbs
@@ -49,7 +49,7 @@
        </figure>
        <br><br>
         <p>
-        Here is an <strong>abnormal</strong> mammogram. Note that the red circled area contains an abnormally shaped or new abnormal area of white tissue.  Not all abnormal tissue is seen on a mammogram is cancerous.
+        Here is an <strong>abnormal</strong> mammogram. Note that the pink circled area contains an abnormally shaped or new abnormal area of white tissue.  Not all abnormal tissue is seen on a mammogram is cancerous.
 
         </p>
         <figure>
