--- a/src/javascript/templates/patient1/patient1View30.hbs
+++ b/src/javascript/templates/patient1/patient1View30.hbs
@@ -75,7 +75,7 @@ The higher the Recurrence Score, the greater the chance that the breast cancer w
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="patient1view31"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view31"  class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
