--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -68,7 +68,7 @@
                 <figure>
                   <img src="images/microscope8.jpg" alt="" />
                 </figure>
-                <p>Does Velma's breast tissue sample indicate the presence of cancer?
+                <p>Does Velma's breast tissue sample indicate the presence of cancer? Hover over the tissue samples to magnify.
                             </p>
                      <figure>
                        <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Velma.jpg" src="images/HE_Invasive_Velma.jpg" alt="cell biopsy slide 3" />
