--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -58,7 +58,7 @@
       <figure>
         <img src="images/microscope8.jpg" alt="" />
       </figure>
-      <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.
+      <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook. Hover over the tissue samples to magnify.
 </p>
 <ul class="specs">
   <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
