--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -55,9 +55,8 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
 
         </div>
       </div>
-      <p>Are Michele’s ER test results positive or negative?  <br><br>
-<strong>Be sure to record this information in the Lab Handbook.
-</strong>
+      <p>Are Michele’s ER test results positive or negative? Be sure to record this information in the Lab Handbook. Hover over the tissue samples to magnify.
+
 </p>
 <ul class="specs">
   <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
