--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -45,7 +45,7 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
   
-    <main id="content-main" class="row patient-3 svg-text">
+    <main id="content-main" class="row patient-3 svg-test">
 
 
         <div class="svg-container">
