--- a/src/javascript/templates/patient1/patient1View29.hbs
+++ b/src/javascript/templates/patient1/patient1View29.hbs
@@ -72,7 +72,7 @@ The OncoType DX® Test gives information about prognosis (how likely the tumor w
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="patient1view30"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view30"  class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
