--- a/src/javascript/templates/patient1/patient1View34.hbs
+++ b/src/javascript/templates/patient1/patient1View34.hbs
@@ -74,7 +74,7 @@ Putting it All Together: The Estrogen Receptor (ER) Test
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="patient1view35"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view35"  class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
