--- a/src/javascript/templates/patient1/patient1View35.hbs
+++ b/src/javascript/templates/patient1/patient1View35.hbs
@@ -69,7 +69,7 @@ If the HER2 FISH results return as amplified, the physician will likely recommen
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="patient1view36"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view36"  class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
