--- a/src/javascript/templates/patient1/patient1View36.hbs
+++ b/src/javascript/templates/patient1/patient1View36.hbs
@@ -77,7 +77,7 @@ Putting it All Together: The OncoType DX® Test       </blockquote>
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="patient1view37"  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view37"  class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
