added continue button to the two typeform pages

--- a/src/javascript/templates/patient1/patient1View13-5.hbs
+++ b/src/javascript/templates/patient1/patient1View13-5.hbs
@@ -66,24 +66,9 @@
                         <a href="/patient1view14" data-navigate="patient1view14" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a> -->
 
 
-                        <div class="row continue-container background-nav-blue hide-nav">
+                        <div class="row continue-container  ">
                             <div class="col-md-12 no-pad text-center">
-                              <div class="col-md-4">
-                              </div>
-                              <div class="col-md-4 line-across">
-
-                              </div>
-                              <div class="col-md-4">
-
-
-                                <!-- Button trigger modal -->
-                                <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
-
-                                <!-- Modal -->
-
-
-
-                              </div>
+                              <a data-navigate="patient1view14" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
                             </div>
                         </div>
 
