--- a/src/javascript/templates/patient1/patient1View38.hbs
+++ b/src/javascript/templates/patient1/patient1View38.hbs
@@ -69,8 +69,12 @@
                         <!-- <a class="previous" href="/patient1view37" data-navigate="patient1view37"><button class="" type="button" name="button">&#8592; Previous</button></a> -->
 
                         <!-- <a href="/startview2" data-navigate="startview2" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a> -->
+                        <div class="row continue-container  ">
+                            <div class="col-md-12 no-pad text-center">
+                              <a data-navigate="startview2" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
+                            </div>
+                        </div>
 
-                      
 
                     </main>
                 </div>
