added drop shadow on main container updated colors of intro side-nav

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,8 +12,8 @@ $baseUrl: env_or_default("STATIC_URL", "/static/");
 // -------------------------
 $white:                     #fff !default;
 $black:                     #444 !default;
-$dark-blue:                 #0a2332 !default;
-$light-blue:                #61838B !default;
+$dark-blue:                 #061922 !default;
+$light-blue:                #204252 !default;
 $pink:                      #DD307B !default;
 $light-pink:                rgba(221,48,123, .3) !default;
 $med-gray:                  #CBDBE3 !default;
