/patient3view6: fixed

--- a/src/javascript/templates/patient3/patient3view6.hbs
+++ b/src/javascript/templates/patient3/patient3view6.hbs
@@ -50,7 +50,7 @@ The pathologist examined Brittany’s tissue and has provided a pathology report
         </div>
         <div class="col-md-9">
           <h4><b>Patient Overview</b>
-            Here is important information about Brittany's tissue sample.  Be sure to record it in your Lab Handbook. Hover over the tissue samples to magnify.</h4>
+            Here is important information about Brittany's tissue sample.  Be sure to record it in your Lab Handbook.</h4>
 
         </div>
       </div>
