--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -59,7 +59,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
       </div>
       <p>Are the results amplified or not amplified?
  <br><br>
-<strong>Be sure to record this information in the Lab Handbook.
+<strong>Be sure to record this information in the Lab Handbook. Hover over the tissue samples to magnify.
 </strong>
 </p>
 <ul class="specs">
