updated copy on multiple pages

--- a/src/javascript/templates/patient1/patient1View38.hbs
+++ b/src/javascript/templates/patient1/patient1View38.hbs
@@ -60,7 +60,7 @@
                     <main id="content-main" class="row patient-1 svg-test">
 
                       <p>
-                        Take this quiz to refresh what you have learned and that will help you with this lesson.
+                        Take this quiz after you have completed the interactive to demonstrate your understanding.
 
                       </p>
                         <iframe id="my_typeform" src="https://discoverycep.typeform.com/to/OPqTSw" frameBorder="0">
