--- a/src/javascript/templates/patient1/patient1View8.hbs
+++ b/src/javascript/templates/patient1/patient1View8.hbs
@@ -60,12 +60,12 @@
               </div>
               <div class="col-md-6 col-md-offset-1 top-quote">
                 <blockquote>
-                Velma’s doctors have sent her biopsy tissue to be evaluated by the pathologist.
+                  Learn about the difference between normal cells and cancerous cells below.
                 </blockquote>
                 <main id="content-main" class="row patient-1 ">
 
                 <h2>Conducting the biopsy:</h2>
-                <p>Normal cells are orderly and form regular breast duct structures. The cells are similar to one another and have smaller nuclei.  They stain purple with intervening pink stain. Hover over the tissue samples to magnify
+                <p>Normal cells are orderly and form regular breast duct structures. The cells are similar to one another and have smaller nuclei.  They stain purple with intervening pink stain. Hover over the tissue samples to magnify.
 
                 </p>
                 <h2>Normal</h2>
