updated copy on patient1view8 and 9

--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -64,11 +64,10 @@
             </blockquote>
               <main id="content-main" class="row patient-1">
 
-                <h2>Conducting the biopsy:</h2>
                 <figure>
                   <img src="images/microscope8.jpg" alt="" />
                 </figure>
-                <p>Does Velma's breast tissue sample indicate the presence of cancer? Hover over the tissue samples to magnify.
+                <p class="p-top">Does Velma's breast tissue sample indicate the presence of cancer? Hover over the tissue samples to magnify.
                             </p>
                      <figure>
                        <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Velma.jpg" src="images/HE_Invasive_Velma.jpg" alt="cell biopsy slide 3" />
@@ -113,6 +112,9 @@
 
                      </div>
                      </div>
+                     <p class="p-top">
+                       Be sure to record this information in your Lab Handbook.
+                     </p>
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
                           <div class="col-md-4">
