--- a/src/javascript/templates/patient1/patient1View33-5.hbs
+++ b/src/javascript/templates/patient1/patient1View33-5.hbs
@@ -51,38 +51,38 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for OncoType DX® testing.
+Velma’s OncoType DX® Test results are in!       </blockquote>
+        <main id="content-main" class="row patient-1">
 
-       </blockquote>
-        <main id="content-main" class="row patient-1 svg-test">
 
-        <h2>Conducting the test:</h2>
-            <div class="svg-container">
-                <img src="images/clipboard2.jpg" alt="cell biopsy slide 3" />
-                <div class="svg-text full">
+              <h2><span class="pink-hl">Velma Belt’s OncoType DX® Test Results: 10</span></h2>
+              <p>
+
+
+        This score indicates that chemotherapy is NOT beneficial and should not be a part of Velma’s treatment plan. She only requires hormone blocking therapy.
+        <br><br>
+
+        Be sure to record the results in your Lab Handbook.</p>
+
+
+
                     <p>
-                      <strong>Step 4</strong>
-   A score is calculated.
+                      If the ER Test score is positive, the physician may recommend hormone blocking therapy to block estrogen activity.<br><br>
+                      <strong>Velma’s ER test score was positive.</strong>
+ </p>
+<figure>  <img src="images/test_results.jpg" alt="cell biopsy slide 3" /></figure>
 
-  </p>
-                      <a data-navigate="patient1view33_5" class="y-n continue next left-arrow"><span class="top-1">&#8594;</span></a>
 
-                </div>
-
-            </div>
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view32" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view33" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a class="continue next"><button type="button" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
-
-                    <!-- Modal -->
-
+                    <a data-navigate="patient1view34"  class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
