fixed small styling issues on all 3 patientts

--- a/src/javascript/templates/patient1/patient1View29.hbs
+++ b/src/javascript/templates/patient1/patient1View29.hbs
@@ -51,12 +51,12 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-The OncoType DX® Test helps determine if a patient will benefit from chemotherapy as well as hormone blocking therapy.
+The <span class="pink-hl">OncoType DX® Test</span> helps determine if a patient will benefit from chemotherapy as well as hormone blocking therapy.
        </blockquote>
         <main id="content-main" class="row patient-1">
 <p>
-If a patient has an ER positive tumor, HER2 is not amplified, and no lymph nodes are involved, an OncoType DX® Test is needed.
-This test is based on the amount genes are expressed. Gene expression is the observed product of a specific gene (mRNA). Abnormal gene expression in cancer cells may be due to DNA mutations.
+If a patient has an ER positive tumor, HER2 is not amplified, and no lymph nodes are involved, an OncoType DX® Test is needed.<br><br>
+This test is based on the amount genes are expressed. Gene expression is the observed product of a specific gene (mRNA). Abnormal gene expression in cancer cells may be due to DNA mutations.<br><br>
 The OncoType DX® Test gives information about prognosis (how likely the tumor will spread to other parts of the body).  It also helps physicians determine whether patients with early-stage invasive breast cancer will benefit from chemotherapy (in addition to hormone blocking therapy or hormone blocking therapy alone).
 
 
