--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -130,7 +130,7 @@
 
 
                   <!-- Button trigger modal -->
-                  <a class="continue next"><button type="button"  name="button">Next &#8594;</button></a>
+                  <a class="continue next"><button type="button"  name="button">Submit &#8594;</button></a>
 
                   <!-- Modal -->
 
