--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -138,7 +138,7 @@ Review Brittany’s mammogram and click on an area that shows abnormalities.
 
 
                   <!-- Button trigger modal -->
-                  <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                  <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
 
                   <!-- Modal -->
 
