--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -8,6 +8,7 @@
 
     </blockquote>
 </div>
+<a class="previous" style="display:none;" href="/patient1view1" data-navigate="patient1view1"></a>
 <div class="pick-patient col-md-8 col-md-offset-2">
   <a class="start-patient" href="/patient1view1" data-navigate="patient1view1"></a>
     <div class="col-md-5 no-pad">
