--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -104,7 +104,7 @@
 
 
                   <!-- Button trigger modal -->
-                  <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                  <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
 
                   <!-- Modal -->
                   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
