fixed multiple screens in patient2 and patient3. updated copy and modal copy

--- a/src/javascript/templates/patient3/patient3View13.hbs
+++ b/src/javascript/templates/patient3/patient3View13.hbs
@@ -62,7 +62,7 @@ Click below to make your selection for next steps. </p>
 
 
                  <!-- Button trigger modal -->
-                 <a data-navigate="patient3view12" class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -71,10 +71,10 @@ Click below to make your selection for next steps. </p>
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
+                       <h2>That is correct. Based on Brittany’s test results, you have enough information to make a treatment recommendation. </h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient3view14"><button class="muted" name="button">Next &#8594;</button></a>
+                          <a class="continue-2" data-navigate="patient3view12" href="patient3view12"><button  name="button">Continue</button></a>
                        </div>
                      </div>
                    </div>
@@ -86,11 +86,23 @@ Click below to make your selection for next steps. </p>
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient3view14" class="continue next next-test"><button type="button" class="next-test" name="button">Next Test &#8594;</button></a>
-               </div>
-             </div>
-         </div>
+                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
 
+   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+   <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+      <h2>That is incorrect. You now have enough information to make a treatment recommendation. </h2>
+      </div>
+      <div class="modal-footer background-nav-blue">
+         <a class="continue-2" data-navigate="patient3view14" href="patient3view14"><button  name="button">Continue</button></a>
+      </div>
+    </div>
+   </div>
+   </div>
+   </div>
+   </div>
+   </div>
     </main>
   </div>
 
