--- a/src/javascript/templates/patient3/patient3View14.hbs
+++ b/src/javascript/templates/patient3/patient3View14.hbs
@@ -62,7 +62,7 @@ Click below to make your selection for next steps. </p>
 
 
                  <!-- Button trigger modal -->
-                 <a data-navigate="patient3view13" class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -74,7 +74,7 @@ Click below to make your selection for next steps. </p>
                        <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient3view15"><button class="muted" name="button">Next &#8594;</button></a>
+                          <a class="continue-2" data-navigate="patient3view15"><button class="muted" name="button">Continue</button></a>
                        </div>
                      </div>
                    </div>
