--- a/src/javascript/templates/patient2/patient2view11.hbs
+++ b/src/javascript/templates/patient2/patient2view11.hbs
@@ -65,6 +65,7 @@ Do you have enough information to make a recommendation for treatment or do you 
 
 
                  <!-- Button trigger modal -->
+                 <!-- Button trigger modal -->
                  <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
 
 
@@ -74,10 +75,10 @@ Do you have enough information to make a recommendation for treatment or do you 
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
+                       <h2>Select Treatment: That is correct. Based on Michele’s test results, you now have enough information to make a treatment recommendation.  Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient2view12"><button  name="button">Next &#8594;</button></a>
+                          <a class="continue-2" data-navigate="patient2view10" href="patient2view10"><button  name="button">Continue</button></a>
                        </div>
                      </div>
                    </div>
@@ -89,10 +90,24 @@ Do you have enough information to make a recommendation for treatment or do you 
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view12" class="continue next next-test"><button type="button"class="next-test" name="button">Next Test &#8594;</button></a>
-               </div>
-             </div>
-         </div>
+                 <a data-navigate="patient2view8" href="patient2view8" class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
+
+<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+      <h2>Next Test: That is incorrect. Based on Michele’s test results, you now have enough information to make a treatment recommendation.
+      Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.</h2>
+      </div>
+      <div class="modal-footer background-nav-blue">
+         <a class="continue-2" data-navigate="patient2view12" href="patient2view12"><button  name="button">Continue</button></a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
 
     </main>
   </div>
