--- a/src/javascript/templates/patient3/patient3view11.hbs
+++ b/src/javascript/templates/patient3/patient3view11.hbs
@@ -74,10 +74,10 @@ Do you have enough information to make a recommendation for treatment or do you 
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
+                       <h2>Select Treatment:   That is incorrect.  Based on Brittany’s test results, you do not have enough information to make a treatment recommendation. Please continue to next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient3view12"><button  name="button">Next &#8594;</button></a>
+                          <a class="continue-2" data-navigate="patient3view12" href="patient3view12"><button  name="button">Continue</button></a>
                        </div>
                      </div>
                    </div>
@@ -89,10 +89,23 @@ Do you have enough information to make a recommendation for treatment or do you 
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient3view12" class="continue next next-test"><button type="button"class="next-test" name="button">Next Test &#8594;</button></a>
-               </div>
-             </div>
-         </div>
+                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
+
+   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+   <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+      <h2>Next Test: That is correct. Based on Brittany’s test results, you do not have enough information to make a treatment recommendation.</h2>
+      </div>
+      <div class="modal-footer background-nav-blue">
+         <a class="continue-2" data-navigate="patient3view12" href="patient3view12"><button  name="button">Continue</button></a>
+      </div>
+    </div>
+   </div>
+   </div>
+   </div>
+   </div>
+   </div>
 
     </main>
   </div>
