--- a/src/javascript/templates/patient3/patient3view7.hbs
+++ b/src/javascript/templates/patient3/patient3view7.hbs
@@ -73,7 +73,7 @@ Click below to make your selection for next steps.
                        <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient3view8" href="patient3view8"><button  name="button">Next &#8594;</button></a>
+                          <a class="continue-2" data-navigate="patient3view8" href="patient3view8"><button  name="button">Continue</button></a>
                        </div>
                      </div>
                    </div>
