--- a/src/javascript/templates/patient3/patient3view9.hbs
+++ b/src/javascript/templates/patient3/patient3view9.hbs
@@ -77,7 +77,7 @@ Do you have enough information to make a recommendation for treatment or do you 
                        <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient3view10"><button  name="button">Next &#8594;</button></a>
+                          <a class="continue-2" data-navigate="patient3view10"><button  name="button">Continue</button></a>
                        </div>
                      </div>
                    </div>
